--- a/app.html
+++ b/app.html
@@ -3,5 +3,8 @@
     <head></head>
     <body>
         <h3>Ggresa</h3>
+        <div id="app">
+            {{ message }}
+        </div>
     </body>
 </html>
