Save accessToken/teamId on storage

--- a/options.html
+++ b/options.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <div class="container">
-            <label for="token">esa.io API token</label>
-            <input id="token" type="password"></input>
+            <label for="team-id">esa.io Team ID</label>
+            <input id="team-id" type="text"></input>
+
+            <label for="access-token">esa.io API access token</label>
+            <input id="access-token" type="password"></input>
 
             <div id="status"></div>
             <button id="save">Save</button>
