--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <body>
-        <h3>Ggresa</h3>
+        <h2>Ggresa Results</h2>
         <div id="app">
             <ol>
                 <esa-post
